--- a/articles/Templates/Articles/article_list.html
+++ b/articles/Templates/Articles/article_list.html
@@ -7,3 +7,14 @@
 {% else %}
     <p>No articles are available.</p>
 {% endif %}
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="{% url 'article-list' page=page_obj.previous_page_number %}">previous</a>
+        {% endif %}
+
+        {% if page_obj.has_next %}
+            <a href="{% url 'article-list' page=page_obj.next_page_number %}">next</a>
+        {% endif %}
+    </span>
+</div>
