--- a/mediumsite/templates/base/css/home.css
+++ b/mediumsite/templates/base/css/home.css
@@ -13,13 +13,58 @@
   user-select: none; }
 
 button.hamburger {
-  position: relative;
-  display: inline-block;
-  float: right;
-  top: 28px; }
+  position: fixed;
+  right: 0px;
+  top: 40px; }
 
 button.hamburger:focus {
   outline: 0; }
+
+div#current-sect {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 100px;
+  width: 8px;
+  background: #ff1393; }
+
+div#current-sect div {
+  position: relative;
+  top: 50%;
+  transform: translate(-12%, -50%) rotate(270deg);
+  color: black;
+  height: auto;
+  display: inline-block;
+  font-family: Consolas;
+  white-space: nowrap; }
+
+div#dynamic-text {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -24vw;
+  color: #ff1393;
+  font-family: Consolas;
+  font-size: 3vw;
+  font-weight: 600;
+  text-align: center; }
+
+div#hamburger-wrapper {
+  position: fixed;
+  max-width: 900px;
+  width: 100%;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 101; }
+
+div#indicator-left {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 8px;
+  height: 100%;
+  background: #CCCCCC; }
 
 div#nav-screen {
   position: fixed;
@@ -28,7 +73,8 @@ div#nav-screen {
   width: 100%;
   height: 100%;
   background: rgba(255, 19, 147, 0.9);
-  display: none; }
+  display: none;
+  z-index: 100; }
 
 div#nav-screen ul {
   position: relative;
@@ -45,6 +91,7 @@ div#nav-screen a {
   color: #FFFFFF;
   font-family: Consolas;
   font-size: 25px;
+  font-weight: 600;
   text-align: right;
   text-decoration: none;
   transition: ease-in-out 0.1s; }
@@ -52,6 +99,31 @@ div#nav-screen a {
 div#nav-screen a:hover {
   background: rgba(255, 255, 255, 0.7);
   color: #ff1393; }
+
+div#splash {
+  position: relative;
+  left: 0px;
+  top: 40vh;
+  transform: translateY(-50%); }
+
+div#splash:hover {
+  cursor: default; }
+
+div#splash h1 {
+  background: url("../imgs/Cornell2.jpg");
+  background-repeat: repeat-x;
+  background-position: 0 0;
+  background-size: contain;
+  font-family: 'Cooper Hewitt';
+  font-size: 35vw;
+  text-align: center;
+  opacity: 0.3;
+  color: transparent;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 0; }
 
 img#logo {
   position: relative;
@@ -61,7 +133,40 @@ img#logo {
   transform: translateX(-50%);
   max-width: 200px; }
 
-header {
-  z-index: 2; }
+span#typed {
+  text-align: center;
+  letter-spacing: 2px; }
+
+span.typed-cursor {
+  background: #ff1393;
+  padding-right: 4px;
+  padding-top: 5px;
+  margin-left: 8px;
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite; }
+
+@keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+@-moz-keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 /*# sourceMappingURL=home.css.map */
