--- a/mediumsite/templates/base/scss/home.scss
+++ b/mediumsite/templates/base/scss/home.scss
@@ -1,3 +1,4 @@
+$blue: #52D8D8;
 $pink-rgb: (255, 19, 147);
 $pink: rgb(nth($pink-rgb, 1), nth($pink-rgb, 2), nth($pink-rgb, 3));
 
@@ -17,15 +18,60 @@ $pink: rgb(nth($pink-rgb, 1), nth($pink-rgb, 2), nth($pink-rgb, 3));
 }
 
 button.hamburger {
-	position: relative;
-	display: inline-block;
-	float: right;
-	top: 28px;
+	position: fixed;	
+	right: 0px;
+	top: 40px;
 }
 button.hamburger:focus {
 	outline: 0;
 }
 
+div#current-sect {
+	position: fixed;
+	top: 50%;
+	transform: translateY(-50%);
+	height: 100px;
+	width: 8px;
+	background: $pink;
+}
+div#current-sect div {
+	position: relative;
+	top: 50%;
+	transform: translate(-12%, -50%) rotate(270deg);
+	color: black;
+	height: auto;
+	display: inline-block;
+	font-family: Consolas;
+	white-space: nowrap;
+}
+div#dynamic-text {
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	top: -24vw;
+	color: $pink;
+	font-family: Consolas;
+	font-size: 3vw;
+	font-weight: 600;
+	text-align: center;
+}
+div#hamburger-wrapper {
+	position: fixed;
+	max-width: 900px;
+	width: 100%;
+	top: 0px;
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: 101;
+}
+div#indicator-left {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 8px;
+	height: 100%;
+	background: #CCCCCC;
+}
 div#nav-screen {
 	position: fixed;
 	top: 0px;
@@ -34,6 +80,7 @@ div#nav-screen {
 	height: 100%;
 	background: rgba(nth($pink-rgb, 1), nth($pink-rgb, 2), nth($pink-rgb, 3), 0.9);
 	display: none;
+	z-index: 100;
 }
 div#nav-screen ul {
 	position: relative;
@@ -53,6 +100,7 @@ div#nav-screen a {
 	color: #FFFFFF;
 	font-family: Consolas;
 	font-size: 25px;
+	font-weight: 600;
 	text-align: right;
 	text-decoration: none;
 	transition: ease-in-out 0.1s;
@@ -60,6 +108,31 @@ div#nav-screen a {
 div#nav-screen a:hover {
 	background: rgba(255, 255, 255, 0.7);
 	color: $pink;
+}
+div#splash {
+	position: relative;
+	left: 0px;
+	top: 40vh;
+	transform: translateY(-50%);
+}
+div#splash:hover {
+	cursor: default;
+}
+div#splash h1 {
+	background:url('../imgs/Cornell2.jpg');
+    background-repeat:repeat-x;
+    background-position:0 0;
+    background-size: contain;
+    font-family: 'Cooper Hewitt';
+    font-size: 35vw;
+    text-align: center;
+    opacity: 0.3;
+    color: transparent;
+    -webkit-background-clip:text;
+    -moz-background-clip:text;
+    background-clip:text;
+    -webkit-text-fill-color:transparent;
+    margin:0;
 }
 
 img#logo {
@@ -71,7 +144,32 @@ img#logo {
 	max-width: 200px;
 }
 
-header {
-	z-index: 2;
-	// display: block;
+span#typed {
+	text-align: center;
+	letter-spacing: 2px;
+}
+span.typed-cursor {
+	background: $pink;
+	padding-right: 4px;
+	padding-top: 5px;
+	margin-left: 8px;
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink {
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink {
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink {
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
 }
