--- a/static/css/home.css
+++ b/static/css/home.css
@@ -28,6 +28,9 @@ div#current-sect {
   width: 8px;
   background: #ff1393; }
 
+div#current-sect:hover {
+  cursor: default; }
+
 div#current-sect div {
   position: relative;
   top: 50%;
@@ -66,6 +69,57 @@ div#indicator-left {
   height: 100%;
   background: #CCCCCC; }
 
+div#join form div {
+  float: left;
+  text-align: center;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%); }
+
+div#join form i {
+  position: relative;
+  left: -8px;
+  top: 6px;
+  color: #CCCCCC; }
+
+div#join form i:hover {
+  cursor: default; }
+
+div#join input[type=text] {
+  display: inline-block;
+  border: 0px;
+  border-bottom: 1px solid #CCCCCC;
+  background: none;
+  color: #AAAAAA;
+  padding: 5px 0px 10px 30px;
+  margin-top: 10px;
+  margin-left: -30px;
+  font-family: Consolas;
+  font-size: 18px; }
+
+div#join input[type=submit] {
+  display: inline-block;
+  border: 3px solid #ff1393;
+  background: #ff1393;
+  color: white;
+  font-family: Consolas;
+  font-size: 18px;
+  margin-top: 10px;
+  padding: 11px 20px 8px 20px;
+  transition: ease-in-out 0.1s; }
+
+div#join input[type=submit]:hover {
+  background: white;
+  color: #ff1393;
+  cursor: pointer; }
+
+div#join input:focus {
+  outline: none; }
+
+div#main-wrap {
+  padding-left: 30px;
+  padding-right: 30px; }
+
 div#nav-screen {
   position: fixed;
   top: 0px;
@@ -100,11 +154,32 @@ div#nav-screen a:hover {
   background: rgba(255, 255, 255, 0.7);
   color: #ff1393; }
 
-div#splash {
+div.section {
   position: relative;
+  top: 0px;
   left: 0px;
-  top: 40vh;
-  transform: translateY(-50%); }
+  width: 100%;
+  height: 100vh;
+  padding: 0px;
+  margin: 0px;
+  border-bottom: 1px dashed #CCCCCC; }
+
+div.section div {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-right: 15px;
+  padding-left: 15px;
+  margin: 0px;
+  font-family: Consolas; }
+
+div.section h1 {
+  color: #ff1393;
+  font-size: 22px;
+  text-align: center; }
+
+div.section p {
+  font-size: 18px; }
 
 div#splash:hover {
   cursor: default; }
@@ -132,6 +207,34 @@ img#logo {
   left: 50%;
   transform: translateX(-50%);
   max-width: 200px; }
+
+span.block-down-arrow {
+  bottom: 8px; }
+
+span.block-up-arrow {
+  top: 8px; }
+
+span.nav-arrow {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  color: #999999;
+  transition: ease-in-out 0.3s; }
+
+span.nav-arrow:hover {
+  cursor: pointer;
+  color: #ff1393; }
+
+span.nav-arrow p {
+  color: white;
+  font-family: Consolas;
+  font-size: 12px;
+  padding: 0px;
+  transition: ease-in-out 0.3s; }
+
+span.nav-arrow:hover p {
+  color: #ff1393; }
 
 span#typed {
   text-align: center;
