--- a/templates/events.html
+++ b/templates/events.html
@@ -1,4 +1,16 @@
 {% load static %}
 {% include "header.html" %}
 
+<div class="left-wrapper">
+	<h1>upcoming events</h1>
+	<div class="event-container">
+		<div class="event-date-container">
+			<span class="date">date</span>
+			<span class="time">time</span>
+		</div>
+		<h1>event title</h1>
+		<div class="event-description"><a href="" class="read-more">read more >></a></div>
+	</div>
+</div>
+
 {% include "footer.html" %}
