--- a/templates/header.html
+++ b/templates/header.html
@@ -8,8 +8,10 @@
  	<title>Medium Design Collective</title>
  	<meta name="description" content="Medium Design Collective">
 
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="{% static "css/home.css" %}">
+	<link href="https://fonts.googleapis.com/css?family=Material+Icons|Source+Code+Pro|Source+Sans+Pro:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="{% static "css/about.css" %}">
+	<!-- <link rel="stylesheet" href="{% static "css/home.css" %}"> -->
+	<link rel="stylesheet" href="{% static "css/universal.css" %}">
 	<link rel="stylesheet" href="{% static "css/hamburgers.css" %}" >
 
 	<script src="{% static "js/jquery-3.1.1.min.js" %}"></script>
