--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,9 @@
 {% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static "css/about.css" %}">
+{% endblock %}
+
 {% include "header.html" %}
 
 <!-- Main body -->
