--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
 {% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static "css/home.css" %}">
+{% endblock %}
+
 {% include "header.html" %}
 
 <div id="indicator-left">
