Made logo a link home

--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
 
 <body>
 	<header class="content-wrapper">
-		<img id="logo" src="{% static "imgs/logo.png" %}">
+		<a href="{% url 'index' %}"><img id="logo" src="{% static "imgs/logo.png" %}"></a>
 	</header>
 
 	<!-- Always on top, fixed on page -->
