--- a/templates/events.html
+++ b/templates/events.html
@@ -1,16 +1,16 @@
 {% load static %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static "css/events.css" %}">
+{% endblock %}
+
 {% include "header.html" %}
 
-<div class="left-wrapper">
-	<h1>upcoming events</h1>
-	<div class="event-container">
-		<div class="event-date-container">
-			<span class="date">date</span>
-			<span class="time">time</span>
-		</div>
-		<h1>event title</h1>
-		<div class="event-description"><a href="" class="read-more">read more >></a></div>
-	</div>
+<div class="content-wrapper">
+<h1 class="unselectable">Upcoming events</h1>
+<div id="google_calendar">
+	<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=o5ne9e7vs8ggvdsr3lfd3ikv10%40group.calendar.google.com&amp;color=%232952A3&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+</div>
 </div>
 
 {% include "footer.html" %}
