--- a/templates/header.html
+++ b/templates/header.html
@@ -33,7 +33,7 @@
 	<div class="unselectable" id="nav-screen">
 		<ul>
 			<li><a href="{% url 'index' %}"><span class="content-wrapper">Home</span></a></li>
-			
+			<li><a href="{% url 'events' %}"><span class="content-wrapper">Events</span></a></li>
 			<li><a href="{% url 'about' %}"><span class="content-wrapper">About Us</span></a></li>
 		</ul>
 	</div>
