Added actual content

--- a/static/scss/home.scss
+++ b/static/scss/home.scss
@@ -126,14 +126,14 @@ div#splash:hover {
 	cursor: default;
 }
 div#splash h1 {
-	background:url('../imgs/Cornell2.jpg');
+	background:url('../imgs/back_gif.gif');
     background-repeat:repeat-x;
     background-position:0 0;
     background-size: contain;
     font-family: 'Cooper Hewitt';
     font-size: 35vw;
     text-align: center;
-    opacity: 0.3;
+    opacity: 0.2;
     color: transparent;
     -webkit-background-clip:text;
     -moz-background-clip:text;
