--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 		</span> 
 		<div>
 			<h1>Fostering design at Cornell University</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet dictum mauris viverra. Suspendisse malesuada diam ac tortor venenatis bibendum. Phasellus ut risus augue. Donec sem eros, congue quis lacus eget, lacinia dignissim nibh. Suspendisse potenti. Mauris sed rhoncus magna, non congue orci. Quisque blandit metus dui.</p>
+			<p>We believe the design process exists in every discipline. It is the blueprint that allows different disciplines to collaborate and innovate. We are Cornell University's first interdisciplinary design community and multi-dimensional platform that aims to connect disciplines through design. To accomplish this, we host design-focused events to bring together the Cornell community, publish an annual design review, and are working to build a web platform to improve the accessibility of design at Cornell.</p>
 		</div>
 		<span class="nav-arrow block-down-arrow unselectable">
 			<p>Join Us</p>
