--- a/static/css/about.css
+++ b/static/css/about.css
@@ -38,6 +38,10 @@ li img {
   height: 60px;
   padding-right: 25px; }
 
+ol {
+  font-family: 'Source Sans Pro';
+  font-size: 15px; }
+
 ul {
   list-style-type: none;
   padding-left: 0;
