--- a/static/scss/about.scss
+++ b/static/scss/about.scss
@@ -47,6 +47,11 @@ li img {
 	padding-right: 25px;
 }
 
+ol {
+	font-family: 'Source Sans Pro';
+	font-size: 15px;
+}
+
 ul {
 	list-style-type: none;
 	padding-left: 0;
