--- a/templates/about.html
+++ b/templates/about.html
@@ -15,60 +15,66 @@
 			<li>
 				<img src="{% static "imgs/group_icon.png" %}">
 				<p><strong>Bring together people interested in design at Cornell</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				Our priority it to build a community by connecting and collaborating with existing organizations and disciplines through design. We were founded in response to a call from leaders across campus for a stronger student alliance towards deisgn.</p>
 			</li>
 			<li>
 				<img src="{% static "imgs/hammer_icon.png" %}">
 				<p><strong>Increase access to design tools and resources</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				By uniting design organizations across campus, our objective is to make design tools and resouces easier to reach for those in need. The focus of our web platform is to provide a connection point and centralized resource to people interested in design.</p>
 			</li>
 			<li>
 				<img src="{% static "imgs/publication_icon.png" %}">
 				<p><strong>Publish an annual design review</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				The objective of our publication is to expose the diverse design pockets on campus and provide a unified perspective on Cornell’s creative community. We typically publish in mid-spring of each year.</p>
 			</li>
 			<li>
 				<img src="{% static "imgs/events_icon.png" %}">
 				<p><strong>Host design events</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				We host events for the Cornell community throughout the year to drive excitement about design on campus. Past events include the Raw Expo, Adobe workshops, and the Cornell Creative Sprint.</p>
 			</li>
 			<li>
 				<img src="{% static "imgs/question_icon.png" %}">
 				<p><strong>Provide design consulting</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				As a center for the campus design community, we are always available to help connect people looking for help in their design pursuits with those who can help them. We pull knowledge from both our core team and the organizations we connect.</p>
 			</li>
 		</ul>
 	</div>
 	<div class="section">
 		<h1>Our Mission</h1>
-		<p><strong>Using design in its different forms to inspire dialogue across disciplines. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet dictum mauris viverra. Suspendisse malesuada diam ac tortor venenatis bibendum. Phasellus ut risus augue. Donec sem eros, congue quis lacus eget, lacinia dignissim nibh. Suspendisse potenti. Mauris sed rhoncus magna, non congue orci. Quisque blandit metus dui.</p>
+		<p><strong>Using design in its different forms to inspire dialogue across disciplines. </strong>Our mission is to build an interdisciplinary community that promotes design education, culture and dialogue by connecting organizations and individuals through design. Our core values are:
+
+		<ol>
+			<li>To increase dialogue amongst organizations about design on campus</li>
+			<li>To connect design to other organizations and teams to build more innovative and holistic solutions</li>
+			<li>To promote the value of design through interdisciplinary collaborations that have implications beyond academy into practice</li>
+		</ol></p>
 	</div>
 	<div class="section">
 		<h1>Who We Are</h1>
 		<img class="section-banner" src="{% static "imgs/who_banner.jpg" %}">
-		<p><strong>A group of like-minded individuals. </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet dictum mauris viverra. Suspendisse malesuada diam ac tortor venenatis bibendum. Phasellus ut risus augue. Donec sem eros, congue quis lacus eget, lacinia dignissim nibh. Suspendisse potenti. Mauris sed rhoncus magna, non congue orci. Quisque blandit metus dui.</p>
+		<p><strong>A group of like-minded individuals. </strong>Medium's team originated as a group of students from Cornell's College of Architecture, Art, and Planning, and has since grown to incorporate students from many colleges and disciplines. Our team focuses on specific deliverables and projects to connect, create, and sustain the design community on campus. We accomplish this through four subteams:</p>
 
 		<h2>Subteams</h2>
 		<ul>
 			<li>
 				<img src="{% static "imgs/events_icon.png" %}">
 				<p><strong>Events</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				Plans and organizes all of the events coordinated by Medium, ranging from the Raw Expo to our annual design challenge.</p>
 			</li>
 			<li>
 				<img src="{% static "imgs/publication_icon.png" %}">
 				<p><strong>Publication</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				Works to publish our annual design review, following ideas from their inception to their realization on the page.</p>
 			</li>
 			<li>
 				<img src="{% static "imgs/brand_icon.png" %}">
 				<p><strong>Brand</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				Organizes our external presence and develops marketing materials for everything Medium.</p>
 			</li>
 			<li>
 				<img src="{% static "imgs/web_icon.png" %}">
 				<p><strong>Web</strong><br >
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum nisl quam, at porta orci molestie et. Quisque volutpat nisi a sapien malesuada, aliquet.</p>
+				Develops our web platform, built from the ground up using the Django web framework.</p>
 			</li>
 		</ul>
 	</div>
