Fixes to fonts, home page formatting, Icons8 attribution. Added Google Analytics tracking (must be manually enabled on server

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -96,7 +96,7 @@ div.section {
   left: 0px;
   width: 100%;
   height: 100vh;
-  padding: 0px;
+  padding: 0px 0px 4px 0px;
   margin: 0px;
   border-bottom: 1px dashed #CCCCCC; }
 
@@ -126,7 +126,7 @@ div#splash h1 {
   background-repeat: repeat-x;
   background-position: 0 0;
   background-size: contain;
-  font-family: 'Cooper Hewitt';
+  font-family: 'Cooper Hewitt Bold';
   font-size: 35vw;
   text-align: center;
   opacity: 0.2;
@@ -138,7 +138,7 @@ div#splash h1 {
   margin: 0; }
 
 span.block-down-arrow {
-  bottom: 8px; }
+  bottom: 12px; }
 
 span.block-up-arrow {
   top: 8px; }
