--- a/templates/about.html
+++ b/templates/about.html
@@ -80,4 +80,6 @@
 	</div>
 	</div>
 </div>
+
+<div id="attributions">Icons by <a href="http://icons8.com">Icons8</a></div>
 {% include "footer.html" %}
