--- a/static/scss/home.scss
+++ b/static/scss/home.scss
@@ -100,7 +100,8 @@ div.section {
 	left: 0px;
 	width: 100%;
 	height: 100vh;
-	padding: 0px;
+	padding: 0px 0px 4px 0px;
+	// padding-bottom: 10px;
 	margin: 0px;
 	border-bottom: 1px dashed #CCCCCC;
 }
@@ -130,7 +131,7 @@ div#splash h1 {
     background-repeat:repeat-x;
     background-position:0 0;
     background-size: contain;
-    font-family: 'Cooper Hewitt';
+    font-family: 'Cooper Hewitt Bold';
     font-size: 35vw;
     text-align: center;
     opacity: 0.2;
@@ -143,7 +144,7 @@ div#splash h1 {
 }
 
 span.block-down-arrow {
-	bottom: 8px;
+	bottom: 12px;
 }
 span.block-up-arrow {
 	top: 8px;
