--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,10 @@
 	<link rel="stylesheet" href="{% static "css/universal.css" %}">
 	<link rel="stylesheet" href="{% static "css/hamburgers.css" %}" >
 
+	<link rel="shortcut icon" href="{% static "imgs/favicon.ico" %}" >
+	<link rel="icon" type="image/png" href="{% static "imgs/favicon-192x192.png" %}" sizes="192x192">
+	<link rel="apple-touch-icon" sizes="180x180" href="{% static "imgs/favicon-180x180.png" %}">
+
 	<script src="{% static "js/jquery-3.1.1.min.js" %}"></script>
 </head>
 
