Added mobile scaling, reorganized a bit

--- a/static/scss/universal.scss
+++ b/static/scss/universal.scss
@@ -5,7 +5,7 @@ $pink: rgb(nth($pink-rgb, 1), nth($pink-rgb, 2), nth($pink-rgb, 3));
 
 @font-face {
     font-family: "Cooper Hewitt Bold";
-    src: url('../misc/CooperHewitt-Bold.woff') format('woff'); 
+    src: url('../imgs/CooperHewitt-Bold.woff') format('woff'); 
 }
 
 .content-wrapper {
