--- a/templates/header.html
+++ b/templates/header.html
@@ -7,6 +7,7 @@
 
  	<title>Medium Design Collective</title>
  	<meta name="description" content="Medium Design Collective">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link href="https://fonts.googleapis.com/css?family=Material+Icons|Source+Code+Pro|Source+Sans+Pro:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="{% static "css/universal.css" %}">
