--- a/static/css/universal.css
+++ b/static/css/universal.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Cooper Hewitt Bold";
-  src: url("../misc/CooperHewitt-Bold.woff") format("woff"); }
+  src: url("../imgs/CooperHewitt-Bold.woff") format("woff"); }
 .content-wrapper {
   position: relative;
   display: block;
