Added application form, made some slight changes to the color scheme to make it less 'abrasive'

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,7 +4,7 @@ div#current-sect {
   transform: translateY(-50%);
   height: 100px;
   width: 8px;
-  background: #ff1393; }
+  background: #ff4e88; }
 
 div#current-sect:hover {
   cursor: default; }
@@ -24,7 +24,7 @@ div#dynamic-text {
   left: 50%;
   transform: translateX(-50%);
   top: -24vw;
-  color: #ff1393;
+  color: #ff4e88;
   font-family: 'Source Code Pro';
   font-size: 3vw;
   font-weight: 600;
@@ -68,8 +68,8 @@ div#join input[type=email] {
 
 div#join input[type=submit] {
   display: inline-block;
-  border: 3px solid #ff1393;
-  background: #ff1393;
+  border: 3px solid #ff4e88;
+  background: #ff4e88;
   color: white;
   font-family: 'Source Code Pro';
   font-size: 18px;
@@ -79,7 +79,7 @@ div#join input[type=submit] {
 
 div#join input[type=submit]:hover {
   background: white;
-  color: #ff1393;
+  color: #ff4e88;
   cursor: pointer; }
 
 div#join input:focus {
@@ -110,7 +110,7 @@ div.section div {
   font-family: 'Source Code Pro'; }
 
 div.section h1 {
-  color: #ff1393;
+  color: #ff4e88;
   font-size: 22px;
   text-align: center; }
 
@@ -153,7 +153,7 @@ span.nav-arrow {
 
 span.nav-arrow:hover {
   cursor: pointer;
-  color: #ff1393; }
+  color: #ff4e88; }
 
 span.nav-arrow p {
   color: white;
@@ -163,14 +163,14 @@ span.nav-arrow p {
   transition: ease-in-out 0.3s; }
 
 span.nav-arrow:hover p {
-  color: #ff1393; }
+  color: #ff4e88; }
 
 span#typed {
   text-align: center;
   letter-spacing: 2px; }
 
 span.typed-cursor {
-  background: #ff1393;
+  background: #ff4e88;
   padding-right: 4px;
   padding-top: 5px;
   margin-left: 8px;
