--- a/static/css/about.css
+++ b/static/css/about.css
@@ -13,7 +13,7 @@ div.section strong {
 
 h1 {
   padding-bottom: 30px;
-  color: #ff1393;
+  color: #ff4e88;
   font-family: 'Source Code Pro';
   font-size: 22px;
   text-align: center; }
@@ -21,7 +21,7 @@ h1 {
 h2 {
   padding-top: 45px;
   padding-bottom: 15px;
-  color: #ff1393;
+  color: #ff4e88;
   font-family: 'Source Code Pro';
   font-size: 17px;
   text-align: center; }
