--- a/static/css/events.css
+++ b/static/css/events.css
@@ -14,7 +14,7 @@ div#google_calendar iframe {
 h1 {
   cursor: default;
   padding-top: 40px;
-  color: #ff1393;
+  color: #ff4e88;
   font-family: 'Source Code Pro';
   font-size: 22px;
   text-align: center; }
