--- a/static/css/universal.css
+++ b/static/css/universal.css
@@ -33,7 +33,7 @@ div#attributions {
   text-align: center; }
 
 div#attributions a {
-  color: #ff1393;
+  color: #ff4e88;
   text-decoration: none; }
 
 div#hamburger-wrapper {
@@ -55,7 +55,7 @@ div#nav-screen {
   left: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(255, 19, 147, 0.9);
+  background: rgba(255, 78, 136, 0.9);
   display: none;
   z-index: 100; }
 
@@ -81,7 +81,7 @@ div#nav-screen a {
 
 div#nav-screen a:hover {
   background: rgba(255, 255, 255, 0.7);
-  color: #ff1393; }
+  color: #ff4e88; }
 
 img#logo {
   position: relative;
