--- a/templates/header.html
+++ b/templates/header.html
@@ -40,5 +40,6 @@
 			<li><a href="{% url 'index' %}"><span class="content-wrapper">Home</span></a></li>
 			<li><a href="{% url 'events' %}"><span class="content-wrapper">Events</span></a></li>
 			<li><a href="{% url 'about' %}"><span class="content-wrapper">About Us</span></a></li>
+			<li><a href="{% url 'apply' %}"><span class="content-wrapper">Join Us</span></a></li>
 		</ul>
 	</div>
