--- a/templates/apply.html
+++ b/templates/apply.html
@@ -73,6 +73,8 @@
 
 	<label>How can Medium help you?</label>
 	<textarea></textarea>
+
+	<input type="submit" value="Submit Application" name="subscribe">
 </form>
 </div>
 
