--- a/static/scss/apply.scss
+++ b/static/scss/apply.scss
@@ -113,6 +113,20 @@ form {
 			top: -6px;
 		}
 	}
+	div.radio-single input:focus ~ div.radio-indicator div {
+		background: $pink;
+	}
+	div.radio-single input:checked ~ div.radio-indicator div {
+			background: $pink;
+	}
+	div.radio-single div.radio-indicator:after {
+		top: 7px;
+		left: 7px;
+		width: 6px;
+		height: 6px;
+		border-radius: 50%;
+		background: #DDD;
+	}
 	input[type=text]  {
 		outline: none;
 		display: block;
@@ -140,23 +154,23 @@ form {
 		height: 20px;
 		opacity: 0;
 	}
-
-	div.radio-single input:focus ~ div.radio-indicator div {
+	input[type=submit] {
+		position: relative;
+		left: 50%;
+		transform: translateX(-50%);
+		border: 3px solid $pink;
 		background: $pink;
+		color: white;
+		font-family: 'Source Code Pro';
+		font-size: 18px;
+		margin-top: 10px;
+		padding: 11px 20px 8px 20px;
+		transition: ease-in-out 0.1s;
 	}
-
-	div.radio-single input:checked ~ div.radio-indicator div {
-			background: $pink;
-	}
-
-	/* Radio button inner circle */
-	div.radio-single div.radio-indicator:after {
-		top: 7px;
-		left: 7px;
-		width: 6px;
-		height: 6px;
-		border-radius: 50%;
-		background: #DDD;
+	input[type=submit]:hover {
+		background: white;
+		color: $pink;
+		cursor: pointer;
 	}
 
 	label {
