--- a/templates/competition.html
+++ b/templates/competition.html
@@ -1,8 +1,8 @@
 {% load static %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static "css/competition.css" %}">
     <link rel="stylesheet" href="{% static "css/home.css" %}">
+    <link rel="stylesheet" href="{% static "css/competition.css" %}">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css"/>
 {% endblock %}
 
@@ -50,11 +50,7 @@
 	</div>
 
 
-<div id="indicator-left">
-	<div class="unselectable" id="current-sect">
-		<div>Welcome</div>
-	</div>
-</div>
+
 
 <div id="indicator-right">
 </div>
@@ -63,8 +59,14 @@
 <div class="content-wrapper" style="margin-top: -90px;">
 	<div id="main-wrap">
 	<div data-section-title="(Re)design Time" class="section">
-		<div>
-
+		<div style="height:100%;display:table;width:80%">
+			<span class="secspan" style="display:table-cell;vertical-align:middle;transform: translateY(10%)!important;">
+				<div class="info" style="top:10px">EXHIBITION MM.DD.YYYY at MANN GALLERY</div>
+				<div class="maintitle" style="font-family: 'BodoniFLF';"><span style="color:#e1ad17">(RE)</span>DESIGN<br>TIME</div>
+				<div class="subt1">RE-THINK THE CONCEPT OF TIME THROUGH ANY MEDIUM</div>
+				<div class="info">Submissions due MM.DD.YYYY @ HH:MM(?)</div>
+				<div class="submit" style="color:#e1ad17"><a href="">SUBMIT >></a></div>
+			</span>
 		</div>
 		<span class="nav-arrow block-down-arrow unselectable">
 			<p>What is this?</p>
@@ -77,8 +79,11 @@
 			<i class="material-icons md-48">keyboard_arrow_up</i>
 			<p>(Re)design Time</p>
 		</span> 
-		<div>
-
+		<div style="height:100%;display:table;width:80%">
+			<span class="secspan" style="display:table-cell;vertical-align:middle;">
+				<div class="subheader">What is this?</div>
+				<div class="info" style="margin-left:40px;">Heck if I know. I’m still not entirely sure what medium does, but I’m sure someone will come up with more legitimate text to put as the event description. This is just a  mockup  so  it’s  whatever.  Text  blah  blah  blah  blah.  Nobody  reads  my  blurbs anyway</div>
+			</span>
 		</div>
 		<span class="nav-arrow block-down-arrow unselectable">
 			<p>What do I need to know?</p>
@@ -91,8 +96,17 @@
 			<i class="material-icons md-48">keyboard_arrow_up</i>
 			<p>What is this?</p>
 		</span> 
-		<div>
-			
+		<div style="height:100%;display:table;width:80%">
+			<span class="secspan" style="display:table-cell;vertical-align:middle;">
+				<div class="subheader">THEME:<span style="color:white"> (Re)design time</div>
+				<div class="info" style="margin-left:40px;">Re-think the concept of time through any medium</div>
+				<div class="subheader">SUBMISSIONS:</div>
+				<div class="info" style="margin-left:40px;">Deadline to submit is god knows what day @ what time. <br>Submissions should be sent to mediumemail@gmail.com.<br> If  there  is  some  reason  they  cannot  sent  any  documentation  by  email  have  them  send up an email with how they would like to be judged</div>
+				<div class="subheader">EXHIBITIONS:</div>
+				<div class="info" style="margin-left:40px;">Winners‘ work will be exhibited on February 23, 2017 in Mann Gallery.</div>
+
+				<div class="submit" style="color:#e1ad17"><a href="">SUBMIT >></a></div>
+			</span>
 		</div>
 	</div>
 	</div>
