Some more fixes, added a page for when applications are down

--- a/static/css/apply.css
+++ b/static/css/apply.css
@@ -93,6 +93,9 @@ form {
     height: 6px;
     border-radius: 50%;
     background: #DDD; }
+  form div.g-recaptcha {
+    padding-top: 10px;
+    padding-bottom: 10px; }
   form input[type=text] {
     outline: none;
     display: block;
