--- a/static/scss/home.scss
+++ b/static/scss/home.scss
@@ -1,6 +1,4 @@
-$blue: #52D8D8;
-$pink-rgb: (255, 78, 136);
-$pink: rgb(nth($pink-rgb, 1), nth($pink-rgb, 2), nth($pink-rgb, 3));
+@import "utilities/variables";
 
 a#join-us {
 	position: absolute;
@@ -127,11 +125,6 @@ div.section div {
 	padding-left: 15px;
 	margin: 0px;
 	font-family: 'Source Code Pro';
-}
-div.section h1 {
-	color: $pink;
-	font-size: 22px;
-	text-align: center;
 }
 div.section p {
 	font-family: 'Source Sans Pro';
