--- a/templates/apply.html
+++ b/templates/apply.html
@@ -2,35 +2,38 @@
 
 {% block styles %}
     <link rel="stylesheet" href="{% static "css/apply.css" %}">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
 
 {% include "header.html" %}
 
 <div class="content-wrapper">
 <h1 class="unselectable">Interested in joining Medium?</h1>
-<div id="positions">
-	<h2 class="unselectable">Please click a role to select and learn more:</h2>
-
-	<div class="position unselectable" data-selected="false">
-		<p class="title">Design Guru</p>
-		<p class="team">Brand Team</p>
-	</div>
-	<div class="position unselectable" data-selected="false">
-		<p class="title">Planner</p>
-		<p class="team">Events Team</p>
-	</div>
-
-	<div class="description">
-		<ul>
-			<li>Experience in visual/digital design and production experience across a variety of media (print, interaction, web, motion, environments)</li>
-			<li>Proficiency in Design Softwares (Adobe softwares required, Sketch and other tools are +++)</li>
-			<li>Experience in concept ideation, design research/strategy, and prototyping</li>
-			<li>Strong fluency in communication and storytelling skills</li>
-			<li>V passionate about building the creative community at Cornell</li>
-		</ul>
-	</div>
-</div>
 <form>
+	<div id="positions">
+		<h2 class="unselectable">Please click a role to select and learn more:</h2>
+
+		<div class="position unselectable" data-selected="false">
+			<input type="radio" class="role" name="position" value="brand">
+			<p class="title">Design Guru</p>
+			<p class="team">Brand Team</p>
+		</div>
+		<div class="position unselectable" data-selected="false">
+			<input type="radio" class="role" name="position" value="events">
+			<p class="title">Planner</p>
+			<p class="team">Events Team</p>
+		</div>
+
+		<div class="description">
+			<ul>
+				<li>Experience in visual/digital design and production experience across a variety of media (print, interaction, web, motion, environments)</li>
+				<li>Proficiency in Design Softwares (Adobe softwares required, Sketch and other tools are +++)</li>
+				<li>Experience in concept ideation, design research/strategy, and prototyping</li>
+				<li>Strong fluency in communication and storytelling skills</li>
+				<li>V passionate about building the creative community at Cornell</li>
+			</ul>
+		</div>
+	</div>
 	<input type="text" id="first-name">
 	<label class="dynamic" id="first-name-lbl">First Name</label>
 
@@ -73,6 +76,9 @@
 
 	<label>How can Medium help you?</label>
 	<textarea></textarea>
+	
+	<center>
+	<div class="g-recaptcha" data-sitekey="6LdBVBQUAAAAAOT9MJb41QZ-xJ5jS78uvjkda3Xr"></div></center>
 
 	<input type="submit" value="Submit Application" name="subscribe">
 </form>
