--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 						<div class="response" id="mce-success-response" style="display:none"></div>
 					</div>
 			</form>
-			<a id="join-us" href="{% url 'apply' %}">Or submit an application online &rarr;</a>
+			<!-- <a id="join-us" href="{% url 'apply' %}">Or submit an application online &rarr;</a> -->
 		</div>
 	</div>
 	</div>
