--- a/templates/competition.html
+++ b/templates/competition.html
@@ -44,6 +44,7 @@
 	<div class="unselectable" id="nav-screen">
 		<ul>
 			<li><a href="{% url 'index' %}"><span class="content-wrapper">Home</span></a></li>
+			<li><a href="{% url 'competition' %}"><span class="content-wrapper">Competition</span></a></li>
 			<li><a href="{% url 'events' %}"><span class="content-wrapper">Events</span></a></li>
 			<li><a href="{% url 'about' %}"><span class="content-wrapper">About Us</span></a></li>
 		</ul>
@@ -61,11 +62,11 @@
 	<div data-section-title="(Re)design Time" class="section">
 		<div style="height:100%;display:table;width:80%">
 			<span class="secspan" style="display:table-cell;vertical-align:middle;transform: translateY(10%)!important;">
-				<div class="info" style="top:10px">EXHIBITION MM.DD.YYYY at MANN GALLERY</div>
-				<div class="maintitle" style="font-family: 'BodoniFLF';"><span style="color:#e1ad17">(RE)</span>DESIGN<br>TIME</div>
+				<div class="info" style="top:10px">EXHIBITION 02.27.2017 at MANN GALLERY</div>
+				<div class="maintitle unselectable" style="font-family: 'BodoniFLF';"><span style="color:#e1ad17">(RE)</span>DESIGN<br>TIME</div>
 				<div class="subt1">RE-THINK THE CONCEPT OF TIME THROUGH ANY MEDIUM</div>
-				<div class="info">Submissions due MM.DD.YYYY @ HH:MM(?)</div>
-				<div class="submit" style="color:#e1ad17"><a href="">SUBMIT >></a></div>
+				<div class="info">Submissions due 02.23.2017 @ 12:00PM</div>
+				<div class="submit" style="color:#e1ad17"><a href="mailto:mediumdesigncollective@gmail.com">SUBMIT >></a></div>
 			</span>
 		</div>
 		<span class="nav-arrow block-down-arrow unselectable">
@@ -82,7 +83,9 @@
 		<div style="height:100%;display:table;width:80%">
 			<span class="secspan" style="display:table-cell;vertical-align:middle;">
 				<div class="subheader">What is this?</div>
-				<div class="info" style="margin-left:40px;">Heck if I know. I’m still not entirely sure what medium does, but I’m sure someone will come up with more legitimate text to put as the event description. This is just a  mockup  so  it’s  whatever.  Text  blah  blah  blah  blah.  Nobody  reads  my  blurbs anyway</div>
+				<div class="info" style="margin-left:40px;">You or someone you know has probably thought, “I wish I had more time!”
+				<br>More time to sleep?<br>Another minute so you didn’t just miss that bus?<br>An extra few hours to complete that assignment?<br>Or perhaps a year to do... nothing.<br><br>
+				<i>(Re)design time is Medium's competition for this year. The style of competitions is open-ended: it could be physical artwork, writing, graphic design, or anything you can think of. We want to see your originality in relating your work to the concept of time and the process that brought you there.</i></div>
 			</span>
 		</div>
 		<span class="nav-arrow block-down-arrow unselectable">
@@ -99,11 +102,11 @@
 		<div style="height:100%;display:table;width:80%">
 			<span class="secspan" style="display:table-cell;vertical-align:middle;">
 				<div class="subheader">THEME:<span style="color:white"> (Re)design time</div>
-				<div class="info" style="margin-left:40px;">Re-think the concept of time through any medium</div>
+				<div class="info" style="margin-left:40px;">Re-think the concept of time through the medium of your choice.</div>
 				<div class="subheader">SUBMISSIONS:</div>
-				<div class="info" style="margin-left:40px;">Deadline to submit is god knows what day @ what time. <br>Submissions should be sent to mediumemail@gmail.com.<br> If  there  is  some  reason  they  cannot  sent  any  documentation  by  email  have  them  send up an email with how they would like to be judged</div>
+				<div class="info" style="margin-left:40px;">Deadline for submissions is 02.23.2017 @ 12:00PM. <br>Submissions should be sent to <a href="mailto:mediumdesigncollective@gmail.com" style="color: white;">mediumdesigncollective@gmail.com</a>.<br> If the project cannot be submitted by email, please contact us prior to the deadline with a request for how you would like to be judged. We will do our best to accomodate all submissions.</div>
 				<div class="subheader">EXHIBITIONS:</div>
-				<div class="info" style="margin-left:40px;">Winners‘ work will be exhibited on February 23, 2017 in Mann Gallery.</div>
+				<div class="info" style="margin-left:40px;">Winners‘ work will be exhibited in Mann Gallery soon after the competition deadline.</div>
 
 				<div class="submit" style="color:#e1ad17"><a href="">SUBMIT >></a></div>
 			</span>
