--- a/static/scss/noapply.scss
+++ b/static/scss/noapply.scss
@@ -4,6 +4,10 @@ div#center-box {
 	position: relative;
 	top: 36vh;
 	transform: translateY(-50%);
+
+	@media screen and (max-width: 500px) {
+		top: 40vh;
+	}
 }
 div#watermark {
 	position: absolute;
@@ -24,6 +28,12 @@ div#watermark {
 		font-size: 50vw;
 		font-weight: 600;
 		white-space: nowrap;
+
+		@media screen and (max-width: 500px) {
+			top: 40%;
+			left: 13%;
+			font-size: 300px;
+		}
 	}
 }
 form div {
