Fixed bugs in competition page, updated content

--- a/static/css/competition.css
+++ b/static/css/competition.css
@@ -92,6 +92,9 @@ div.section div {
 	font-family: 'GlacialIndifferenceRegular' !important;
 }
 
+span.nav-arrow {
+	z-index: 10;
+}
 span.nav-arrow p {
 	font-family: 'GlacialIndifferenceRegular' !important;
 }
