--- a/templates/competition.html
+++ b/templates/competition.html
@@ -108,7 +108,7 @@
 				<div class="subheader">EXHIBITIONS:</div>
 				<div class="info" style="margin-left:40px;">Winners‘ work will be exhibited in Mann Gallery soon after the competition deadline.</div>
 
-				<div class="submit" style="color:#e1ad17"><a href="">SUBMIT >></a></div>
+				<div class="submit" style="color:#e1ad17"><a href="mailto:mediumdesigncollective@gmail.com">SUBMIT >></a></div>
 			</span>
 		</div>
 	</div>
