Fixed small bug in merge

--- a/templates/competition.html
+++ b/templates/competition.html
@@ -47,6 +47,7 @@
 			<li><a href="{% url 'competition' %}"><span class="content-wrapper">Competition</span></a></li>
 			<li><a href="{% url 'events' %}"><span class="content-wrapper">Events</span></a></li>
 			<li><a href="{% url 'about' %}"><span class="content-wrapper">About Us</span></a></li>
+			<li><a href="{% url 'apply' %}"><span class="content-wrapper">Join Us</span></a></li>
 		</ul>
 	</div>
 
