--- a/static/html/components/base.html
+++ b/static/html/components/base.html
@@ -34,12 +34,10 @@
             <a class="nav__option unselectable" href="{% url 'rawexpo' %}">
                 raw expo
             </a>
-            <a class="nav__option unselectable" href="https://medium1.typeform.com/to/EvuQMw">
+<!--             <a class="nav__option unselectable" href="https://medium1.typeform.com/to/EvuQMw">
                 joinus
-            </a>
-            <!-- <a class="nav__option unselectable">
-                join us
             </a> -->
+
         </div>
         <div class="nav__divider"></div>
         <div class="nav__blurb">
