--- a/static/scss/sections/_rawexpo.scss
+++ b/static/scss/sections/_rawexpo.scss
@@ -194,7 +194,7 @@
 
 .picture {
 	height:100vh;
-	min-height: 2710px;
+	min-height: 3000px;
 
 	// padding: 18% 10% 0% 0;
 	display: block;
@@ -314,6 +314,12 @@
 		}
 	}
 
+
+canvas {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+      }
 
 }
 
@@ -500,6 +506,7 @@
 
 
 
+
 		.banner {
 			position: relative;
 			// margin-top: $xlarge-margin;
@@ -542,7 +549,9 @@
 
 
 
-
 }
+
+
+
 
 }
